--- a/JotAThought.Web/Views/Shared/_Posts.cshtml
+++ b/JotAThought.Web/Views/Shared/_Posts.cshtml
@@ -6,8 +6,7 @@
         {
             <div class="post">
                 <h3 style="color:lightblue">@post.Title</h3>
-                <h5 style="color:lightblue">Posted by @post.Author on @post.CreatedOn.ToLongDateString() at @post.CreatedOn.
-                    (-8).ToShortTimeString()</h5>
+                <h5 style="color:lightblue">Posted by @post.Author on @post.CreatedOn.ToLongDateString() at @post.CreatedOn.AddHours(-8.0f).ToShortTimeString()</h5>
                 <p style="color:white">@Html.Raw(@post.Content.Replace("\n", "<br />"))</p>
                 @if (Request.IsAuthenticated && @WebSecurity.CurrentUserName == post.Author)
                 {
